@@ -1,3 +1,11 @@
+2012-12-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCC.y
+	  src/SDCCbtree.h,
+	  src/SDCCbtree.cc,
+	  src/SDCCmem.c:
+	  Infrastructure for block-based stack allocation.
+
 2012-12-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
